syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lamnguyen.order_service.protos";
option java_outer_classname = "OrderProto";

/// Service definition for OrderService
service OrderService {
  rpc GetGeneralInfoByUserId (UserIdsRequest) returns (GeneralInfosResponse);
}

message UserIdsRequest {
  repeated int64 user_id = 1;
}

message GeneralInfo {
  int64 user_id = 1;
  int64  total_order = 2;
  int64  total_spent = 3;
}

message GeneralInfosResponse {
  map<int64, GeneralInfo> general_infos = 1;
}




